--- a/Blazor_Recipe/Blazor_Recipe.Client/Blazor_Recipe.Client.csproj
+++ b/Blazor_Recipe/Blazor_Recipe.Client/Blazor_Recipe.Client.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Material.Blazor" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0-rc.2.23480.2" />
+    <PackageReference Include="MudBlazor" Version="6.11.0" />
   </ItemGroup>
 
   <ItemGroup>
