--- a/Blazor_Recipe/Blazor_Recipe.Client/Blazor_Recipe.Client.csproj
+++ b/Blazor_Recipe/Blazor_Recipe.Client/Blazor_Recipe.Client.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\images\**" />
+    <Content Remove="wwwroot\images\**" />
+    <EmbeddedResource Remove="wwwroot\images\**" />
+    <None Remove="wwwroot\images\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0-rc.2.23480.2" />
     <PackageReference Include="MudBlazor" Version="6.11.0" />
