--- a/Blazor_Recipe/Blazor_Recipe.Client/Blazor_Recipe.Client.csproj
+++ b/Blazor_Recipe/Blazor_Recipe.Client/Blazor_Recipe.Client.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0-rc.2.23480.2" />
     <PackageReference Include="MudBlazor" Version="6.11.0" />
+    <PackageReference Include="Serilog" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
