--- a/Blazor_Recipe/Blazor_Recipe/Blazor_Recipe.csproj
+++ b/Blazor_Recipe/Blazor_Recipe/Blazor_Recipe.csproj
@@ -19,9 +19,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Shared.csproj" />
     <ProjectReference Include="..\Blazor_Recipe.Client\Blazor_Recipe.Client.csproj" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0-rc.2.23480.2" />
-    <PackageReference Include="MudBlazor" Version="6.11.0" />
-    <PackageReference Include="Serilog" Version="3.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.2" />
+    <PackageReference Include="MudBlazor" Version="6.16.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
